--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <script>
         // ## ধাপ ২ থেকে পাওয়া আপনার Apps Script URL টি এখানে বসান ##
-        const API_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
+        const API_URL = 'https://script.google.com/macros/s/AKfycbxPaNt_z0uRscltA5lyE_WTPogNs5d1mCqd7JDREyzJqUTHi0OPQlnh85f3ySpMTU4/exec';
 
         document.addEventListener('DOMContentLoaded', () => {
             const mainContent = document.getElementById('main-content');
