--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         // ===================================================================
         //       ধাপ ১ থেকে কপি করা আপনার Apps Script URL টি এখানে বসান
         // ===================================================================
-        const appsScriptUrl = 'YOUR_APPS_SCRIPT_URL_HERE'; 
+        const appsScriptUrl = 'https://script.google.com/macros/s/AKfycbxPaNt_z0uRscltA5lyE_WTPogNs5d1mCqd7JDREyzJqUTHi0OPQlnh85f3ySpMTU4/exec'; 
         
         // এই ফাংশনটি ব্রাউজারের URL অনুযায়ী iframe এর লিংক সেট করে
         function setIframeSource() {
