--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="container header-content">
             <a href="/" class="store-name">Sundorica</a>
             <div class="header-actions">
+                <div class="search-box">
+                    <input type="text" id="search-input" placeholder="Search for products...">
+                </div>
                 <button id="theme-toggle" class="icon-button" aria-label="Toggle dark mode">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M12 2.25a.75.75 0 0 1 .75.75v2.25a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75ZM7.5 12a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM18.894 6.106a.75.75 0 0 1 0 1.06l-1.591 1.59a.75.75 0 1 1-1.06-1.06l1.59-1.59a.75.75 0 0 1 1.061 0ZM21.75 12a.75.75 0 0 1-.75.75h-2.25a.75.75 0 0 1 0-1.5h2.25a.75.75 0 0 1 .75.75ZM17.894 17.894a.75.75 0 0 1-1.06 0l-1.59-1.591a.75.75 0 1 1 1.06-1.06l1.591 1.59a.75.75 0 0 1 0 1.061ZM12 18a.75.75 0 0 1 .75.75v2.25a.75.75 0 0 1-1.5 0v-2.25A.75.75 0 0 1 12 18ZM7.894 6.106a.75.75 0 0 1 1.06 0l-1.59 1.591a.75.75 0 1 1-1.06-1.06l1.59-1.59a.75.75 0 0 1 0-1.061ZM4.5 12a.75.75 0 0 1-.75.75H1.5a.75.75 0 0 1 0-1.5h2.25a.75.75 0 0 1 .75.75ZM6.106 17.894a.75.75 0 0 1 0-1.06l1.591-1.59a.75.75 0 1 1 1.06 1.06l-1.59 1.59a.75.75 0 0 1-1.061 0Z"/></svg>
                 </button>
@@ -31,10 +34,7 @@
                 </button>
             </div>
         </div>
-        <nav class="container">
-            <div class="search-box">
-                <input type="text" id="search-input" placeholder="Search for products...">
-            </div>
+        <nav class="container nav-container">
             <ul class="nav-menu">
                 <li><a href="#" class="nav-link active" data-category="All">All Products</a></li>
                 <li class="dropdown">
